kubernetes/mini/core/network/external-dns/cloudflare/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-cloudflare
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-dns
      app.kubernetes.io/instance: cloudflare

  egress:
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
